--- a/TraceIt/Views/StandardCategorisedPage.xaml
+++ b/TraceIt/Views/StandardCategorisedPage.xaml
@@ -22,77 +22,66 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="buttons:SfSegmentedControl">
-                <Setter Property="SegmentBackgroundColor" Value="White"/>
+                <Setter Property="SegmentBackgroundColor" Value="#0051AE"/>
                 <Setter Property="SegmentBorderColor" Value="Transparent"/>
-                <Setter Property="BorderColor" Value="Blue"/>
+                <Setter Property="BorderColor" Value="Black"/>
                 <Setter Property="SelectionTextColor" Value="White"/>
-                <Setter Property="FontColor" Value="DarkBlue"/>
-                <Setter Property="CornerRadius" Value="10"/>
+                <Setter Property="FontColor" Value="White"/>
+                <Setter Property="CornerRadius" Value="15"/>
                 <Setter Property="SegmentCornerRadius" Value="0"/>
                 <Setter Property="SegmentHeight" Value="35"/>
                 <Setter Property="SelectionAnimationDuration" Value="100"/>
                 <Setter Property="SelectionIndicatorSettings">
                     <Setter.Value>
-                        <buttons:SelectionIndicatorSettings Position="Fill" Color="DarkBlue"/>
+                        <buttons:SelectionIndicatorSettings Position="Fill" Color="Orange"/>
                     </Setter.Value>
                 </Setter>
             </Style>
             <Style TargetType="Label" x:Key="filterLabelStyle">
-                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="TextColor" Value="White"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
+            <Style TargetType="Frame">
+                <Setter Property="HasShadow" Value="False"/>
+                <Setter Property="BorderColor" Value="Transparent"/>
+                <Setter Property="CornerRadius" Value="20"/>
+                <Setter Property="Padding" Value="20, 10, 0, 10"/>
+            </Style>
+
+            <LinearGradientBrush x:Key="listItemGradient">
+                <LinearGradientBrush.GradientStops>
+                    <GradientStop Color="#4B7BFF" Offset="0.0"/>
+                    <GradientStop Color="#071D57" Offset="1"/>
+                </LinearGradientBrush.GradientStops>
+            </LinearGradientBrush>
 
             <DataTemplate x:Key="standardTemplate">
-                <Frame BackgroundColor="#f5f5f5"
-                       HasShadow="False"
-                       Padding="20,10,0,10"
-                       CornerRadius="20"
-                       BorderColor="#dedede">
+                <Frame Style="{DynamicResource listItemFrame}">
 
                     <StackLayout>
 
-                        <Label Text="{Binding Code}" TextColor="Black"
+                        <Label Text="{Binding Code}" TextColor="White"
                                FontSize="16"/>
-                        <Label Text="{Binding Title}" TextColor="Black"
+                        <Label Text="{Binding Title}" TextColor="White"
                                FontSize="16" VerticalOptions="CenterAndExpand"/>
 
                     </StackLayout>
                 </Frame>
             </DataTemplate>
-
             <DataTemplate x:Key="subfieldTemplate">
-                <Frame BackgroundColor="#f5f5f5"
-               HasShadow="False"
-               Padding="20,20,0,20"
-               CornerRadius="20"
-               BorderColor="#dedede">
-
-                    <StackLayout>
-
-                        <Label Text="{Binding Subfield}" TextColor="Black"
-                       FontSize="16" VerticalOptions="CenterAndExpand"/>
-
-                    </StackLayout>
+                <Frame Style="{DynamicResource listItemFrame}">
+                    <Label Text="{Binding Subfield}" TextColor="White"
+                           FontSize="16" VerticalOptions="CenterAndExpand"/>
                 </Frame>
             </DataTemplate>
-
             <DataTemplate x:Key="subjectTemplate">
-                <Frame BackgroundColor="#f5f5f5"
-               HasShadow="False"
-               Padding="20,20,0,20"
-               CornerRadius="20"
-               BorderColor="#dedede">
-
-                    <Label Text="{Binding Name}" TextColor="Black"
-                   FontSize="16"
-                   VerticalOptions="CenterAndExpand"/>
-
+                <Frame Style="{DynamicResource listItemFrame}">
+                    <Label Text="{Binding Name}" TextColor="White"
+                           FontSize="16" VerticalOptions="CenterAndExpand"
+                           Margin="0, 7"/>
                 </Frame>
             </DataTemplate>
 
-            <templates:StandardDataTemplate x:Key="standardTemplate1"/>
-            <templates:SubfieldDataTemplate x:Key="subfieldTemplate1"/>
-            <templates:SubjectDataTemplate x:Key="subjectTemplate1"/>
             <templates:StandardSearchDataTemplateSelector x:Key="dataTemplateSelector"
                                                           StandardTemplate="{StaticResource standardTemplate}"
                                                           SubfieldTemplate="{StaticResource subfieldTemplate}"
@@ -101,21 +90,22 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand">
+        <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand"
+                     Background="{StaticResource listItemGradient}">
 
-            <SearchBar x:Name="searchBar" BackgroundColor="#f5f5f5" FontAttributes="Italic"
+            <StackLayout BackgroundColor="#001124" Padding="0">
+            <SearchBar x:Name="searchBar" BackgroundColor="#002147" FontAttributes="Italic"
                        Placeholder="Search standards..." TextChanged="searchBar_TextChanged"/>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"
-                         Padding="10, 0, 10, 0" Margin="0">
+                         Padding="20, 0, 10, 10" Margin="0">
 
                 <StackLayout>
                     <Label Text="Standard type:" Style="{StaticResource filterLabelStyle}"/>
                     <buttons:SfSegmentedControl x:Name="assessmentSelector"
                                             HorizontalOptions="StartAndExpand"
                                             SelectionChanged="assessmentSelector_SelectionChanged"
-                                            FontSize="16"
-                                            SegmentWidth="120">
+                                            FontSize="16">
                         <system:List x:TypeArguments="x:String">
                             <x:String>Achievement</x:String>
                             <x:String>Unit</x:String>
@@ -125,10 +115,8 @@
 
                 <StackLayout>
                     <Label Text="Level:" Style="{StaticResource filterLabelStyle}"/>
-                    <buttons:SfSegmentedControl x:Name="levelSelector"
-                                                HorizontalOptions="End"
-                                                SegmentWidth="40"
-                                                FontSize="18">
+                    <buttons:SfSegmentedControl x:Name="levelSelector" HorizontalOptions="End"
+                                                SegmentWidth="40" FontSize="18">
                         <system:List x:TypeArguments="x:String">
                             <x:String>1</x:String>
                             <x:String>2</x:String>
@@ -136,16 +124,16 @@
                         </system:List>
                     </buttons:SfSegmentedControl>
                 </StackLayout>
-
+                </StackLayout>
             </StackLayout>
 
-            <StackLayout Padding="15, 10">
+            <StackLayout Padding="20, 0">
                 <forms:SfListView x:Name="listView"
-                                  ItemSize="50"
                                   ItemSpacing="8"
                                   ItemTapped="collectionViewCategories_ItemTapped"
                                   ItemTemplate="{StaticResource dataTemplateSelector}"
-                                  AutoFitMode="DynamicHeight" SelectionMode="None"/>
+                                  AutoFitMode="DynamicHeight" SelectionMode="None"
+                                  Padding="0"/>
             </StackLayout>
 
         </StackLayout>
