--- a/TraceIt/Views/Charts/EndorsementsChartPage.xaml
+++ b/TraceIt/Views/Charts/EndorsementsChartPage.xaml
@@ -6,7 +6,8 @@
              xmlns:progressbar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusion.SfProgressBar.XForms"
              xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
              xmlns:viewmodels="clr-namespace:TraceIt.ViewModels"
-             xmlns:converters="clr-namespace:TraceIt.Converters"
+             xmlns:converters="clr-namespace:TraceIt.Converters" 
+             xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.Charts.EndorsementsChartPage">
 
@@ -35,6 +36,18 @@
                                 <converters:IsToggledToMaximumConverter/>
                             </Binding.Converter>
                         </Binding>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Progress" Value="{Binding ExcellenceCredits}"/>
+                <Setter Property="SecondaryProgress">
+                    <Setter.Value>
+                        <MultiBinding>
+                            <Binding Path="MeritCredits"/>
+                            <Binding Path="ExcellenceCredits"/>
+                            <MultiBinding.Converter>
+                                <converters:TotalCreditsToSecondaryProgressConverter/>
+                            </MultiBinding.Converter>
+                        </MultiBinding>
                     </Setter.Value>
                 </Setter>
             </Style>
@@ -93,7 +106,7 @@
     <ContentView.Content>
         <ScrollView>
             <StackLayout VerticalOptions="StartAndExpand"
-                         Padding="40, 0" Spacing="20" Margin="20, 20, 20, 20">
+                         Padding="{OnIdiom Phone='20, 0', Tablet='40, 0'}" Spacing="20" Margin="{OnIdiom Phone=0, Tablet=20}">
 
                 <StackLayout>
                     <Label Text="COVID-19 Settings" FontAttributes="Italic"
@@ -155,46 +168,20 @@
                     </Frame>
                 </StackLayout>
 
-                <StackLayout>
-                    <Label Text="Subject Endorsement Progress" Style="{StaticResource headerLabelStyle}"/>
-                    <Frame Style="{StaticResource progressBarFrame}">
-                        <progressbar:SfLinearProgressBar Progress="11" ProgressColor="Orange"
+                <listview:SfListView ItemsSource="{Binding SubjectEndorsements}" AutoFitMode="Height"
+                                     ItemSpacing="12">
+                    <listview:SfListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout>
+                                <Label Text="{Binding Name, StringFormat='{0} Endorsement Progress'}" Style="{StaticResource headerLabelStyle}"/>
+                                <Frame Style="{StaticResource progressBarFrame}">
+                                    <progressbar:SfLinearProgressBar ProgressColor="Orange"
                                                      Style="{StaticResource subjectProgressBar}"/>
-                    </Frame>
-                </StackLayout>
-
-                <StackLayout>
-                    <Label Text="Subject Endorsement Progress" Style="{StaticResource headerLabelStyle}"/>
-                    <Frame Style="{StaticResource progressBarFrame}">
-                        <progressbar:SfLinearProgressBar Progress="6" ProgressColor="Orange"
-                                                     Style="{StaticResource subjectProgressBar}"/>
-                    </Frame>
-                </StackLayout>
-
-                <StackLayout>
-                    <Label Text="Subject Endorsement Progress" Style="{StaticResource headerLabelStyle}"/>
-                    <Frame Style="{StaticResource progressBarFrame}">
-                        <progressbar:SfLinearProgressBar Progress="8" ProgressColor="Orange"
-                                                     Style="{StaticResource subjectProgressBar}"/>
-                    </Frame>
-                </StackLayout>
-
-                <StackLayout>
-                    <Label Text="Subject Endorsement Progress" Style="{StaticResource headerLabelStyle}"/>
-                    <Frame Style="{StaticResource progressBarFrame}">
-                        <progressbar:SfLinearProgressBar Progress="5" ProgressColor="Orange"
-                                                     Style="{StaticResource subjectProgressBar}"/>
-                    </Frame>
-                </StackLayout>
-
-                <StackLayout>
-                    <Label Text="Subject Endorsement Progress" Style="{StaticResource headerLabelStyle}"/>
-                    <Frame Style="{StaticResource progressBarFrame}">
-                        <progressbar:SfLinearProgressBar Progress="10" ProgressColor="Orange"
-                                                     Style="{StaticResource subjectProgressBar}"/>
-                    </Frame>
-                </StackLayout>
-
+                                </Frame>
+                            </StackLayout>
+                        </DataTemplate>
+                    </listview:SfListView.ItemTemplate>
+                </listview:SfListView>
             </StackLayout>
         </ScrollView>
     </ContentView.Content>
